app/styles/app.scss
.container, .container-fluid, 
.container-xxl, .container-xl, 
.container-lg, .container-md, 
.container-sm {
  --bs-gutter-x: 30px;
}

.sticky-top {
  position: sticky;
  top: 0;
  z-index: 1020;
}

.table-warning {
  --bs-table-bg: #ffeeba;
  --bs-table-border-color: #ffdf7e;
  --bs-table-hover-bg: #ffe8a1;
}

.table-success {
  --bs-table-bg: #c3e6cb;
  --bs-table-border-color: #8fd19e;
  --bs-table-hover-bg: #b1dfbb;
}

.table-primary {
  --bs-table-bg: #b8daff;
  --bs-table-border-color: #7abaff;
  --bs-table-hover-bg: #9fcdff;
}

caption {
  color: #6c757d;
  padding-top: .75em;
  padding-bottom: .75em;
}

.table-sm > :not(caption) > * > * {
  padding: .3em;
}

.table-responsive .table-sm > thead + tr > td {
  padding: .3em !important;
  border-bottom-width: var(--bs-border-width);
}

.table-responsive .table-sm > thead + tr > td a {
  color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
  padding-left: 0;
}    

.table-responsive .table > thead + tr > td {
  padding: 0.5rem 0.5rem;
  border-bottom-width: var(--bs-border-width);
}

.card {
  --bs-card-spacer-y: 1.25rem;
  --bs-card-spacer-x: 1.25rem;
}

.card-header, .card-footer {
  --bs-card-cap-padding-y: 0.75rem;
  --bs-card-cap-padding-x: 1.25rem;
}

.active {
  font-weight: bold;
}

.navbar .active {
  font-weight: normal;
}

.in-modal {
  margin: 10px;
}

.spacing {
  margin: 20px;
}

.double {
  padding-top: 20px;
}

.max-score {
  max-width: 20px;
}

.panelest-scoretext {
  font-size: 150%;
}

.tight-line {
  line-height: 1.2;
}

.bottom-spacing {
  padding-top: 60px;
}

.ember-basic-dropdown {
  width: auto;
  min-width: 200px;
}

.person-detail {
  margin: 0 -8px;
  display: flex;
}

.action-list {
  padding: 6px;
}

.fixed-panel-header {
  min-height: 60px;
  max-height: 60px;
  /*overflow-y: scroll;*/
}

.fixed-card-footer {
  min-height: 55px;
  max-height: 55px;
  /*overflow-y: scroll;*/
}

.score-height {
  height: 80px;
}
.big-num {
  font-size: 150%;
}
/*.ember-power-select-placeholder {
  min-width: 200px;
}
*/

.assignment-width {
  min-width: 300px;
}

section {
  margin-top: 20px;
  margin-bottom: 20px;
}

.card-header .img-fluid {
  display: block;
  width: auto;
  max-height: 100px;
}

.alert {
  margin-bottom: 1px;
  height: 30px;
  line-height:30px;
  padding:0px 15px;
}

.smallbox {
  max-height: 200px;
}

.navcenter {
  margin-top: 8px;
}

.points-box {
  max-width: 100px;
}

.launcher {
  width: 200px;
  height: 200px;
}

input[type=checkbox] {
  transform: scale(1.2);
}

.sortable-item {
  transition: all .125s;
  cursor: pointer;
}

.sortable-item.is-dragging {
  transition-duration: 0s;
  background: yellow;
  z-index: 10;
}

.sortable-item.is-dropping {
  z-index: 10;
}

.cut-line {
  border-top: solid 10px black;
}

.btn {
  --bs-border-radius: .25rem;
}

.btn-primary {
  --bs-btn-bg: #007bff;
  --bs-btn-border-color: #007bff; 
  --bs-btn-hover-bg: #0069d9;
  --bs-btn-hover-border-color: #0062cc;
}

.btn-success {
  --bs-btn-bg: #28a745;
  --bs-btn-border-color: #28a745; 
  --bs-btn-hover-bg: #218838;
  --bs-btn-hover-border-color: #1e7e34;
}

.btn-danger {
  --bs-btn-bg: #dc3545;
  --bs-btn-border-color: #dc3545; 
  --bs-btn-hover-bg: #c82333;
  --bs-btn-hover-border-color: #bd2130;
}

.btn-logout {
  display: flex;
  justify-content: center;
  align-items: center;
}

.alert-penalty {
  margin-right: 0.3rem;
  margin-left: 0.3rem;
  padding: 5px 15px;
  height: auto;
}

ul.list-unstyled + ul.list-unstyled {
  margin-top: -1rem;
}

.table thead th.actions {
  width: 190px;
}

#round .card-footer.actions .list-inline,
#appearance-detail .card-footer.actions .list-inline {
  display: flex;
}

#round .card-footer.actions .list-inline li.primary,
#appearance-detail .card-footer.actions .list-inline li.primary {
  margin-right: 6rem;
}

#round .card-footer.actions .list-inline li.pull-right,
#appearance-detail .card-footer.actions .list-inline li.pull-right {
  margin-left: auto;
}

.download-oss-button-wrapper {
  display: flex;
  align-items: center;
}

.warning {
  color: red;
}

.active.btn-outline-dark.disabled,
.active.btn-outline-dark:disabled {
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
  opacity: 1;
}

.list-inline-item.disqualify {
  margin-left: 6em;
}

.environment-name {
  background-color: #ca0404;
  position: fixed;
  bottom: 0;
  right: 0;
  padding: 5px 5px 5px 10px;
  color: white;
  font-weight: bold;
  font-size: 12px;
  border-radius: 5px 0 0 0;
  text-transform: capitalize;
}

.breadcrumb {
  background-color: #e9ecef;
  padding: .75rem 1rem;
  border-radius: .25rem;

  .breadcrumb-item a {
    text-decoration: none;

    &.active {
      font-weight: normal;
    }
  }
}

.badge {
    display: inline-block;
    padding: .25em .4em;
    font-size: 75%;
    font-weight: 700;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: .25rem;
}

.badge-primary {
    color: #fff;
    background-color: #007bff;
}

.table .thead-light th {
    color: #495057;
    background-color: #e9ecef;
    border-color: #dee2e6;
    vertical-align: bottom;
    border-bottom: 2px solid #dee2e6;
    padding: .3rem;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.table tbody tr:last-of-type td {
  border-bottom: none;
}

@import "ember-power-select";
@import "ember-power-datepicker";

.demo-calendar-small {
  @include ember-power-calendar($cell-size: 30px);
}

.demo-calendar-medium {
  @include ember-power-calendar($cell-size: 50px);
}

.demo-calendar-big {
  @include ember-power-calendar($cell-size: 70px);
}

// Components
@import "components/round-appearance";

input[type=checkbox] {
  accent-color: #0275ff;
}

